# viz

./: .containerignore  .drone.yml  .gitignore  Cargo.toml  Dockerfile  basic_temlate.rs  flake.nix  index.liquid  not_found.liquid  template.html
.github/workflows/: test.yml
bicycle_track/: Cargo.toml  desc.md
bicycle_track/src/: main.rs
ellipse_billard/: Cargo.toml  desc.md
ellipse_billard/src/: main.rs
modular_table/: Cargo.toml  desc.md
modular_table/src/: main.rs
plotter/: Cargo.toml
plotter/src/: lib.rs
safety_parabola/: Cargo.toml  desc.md
safety_parabola/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
