[package]
name = "modular_table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.9.0", features = ["canvas"] }
palette = "0.6.1"
petgraph = "0.6.2"
plotter = { version = "0.1.0", path = "../plotter" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
