[package]
name = "plotter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#iced_graphics = { git = "https://github.com/iced-rs/iced", features = ["canvas"] }
iced_graphics = { git = "https://github.com/traxys/iced", branch = "fixup_wasm_replace", features = [
  "canvas",
] }
paste = "1.0.9"
