[package]
name = "safety_parabola"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#iced = { version = "0.4", features = ["canvas"] }
iced = { git = "https://github.com/iced-rs/iced", features = ["canvas"] }
plotter = { version = "0.1.0", path = "../plotter" }
